# aiml-engineer

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  404.html  CNAME  CONTRIBUTING.md  LICENSE  NOTICE.html  README.md  _quarto.yml  hugo.yaml  index.html  index.qmd  listings.json  mkdocs.yml  pyproject.toml  search.json  sitemap.xml
.github/workflows/: publish-docs.yml  publish.yml
assets/css/: custom.css
content/: index.md
content/assets/: 404.html
content/blog/: _index.md
content/experiments/: _index.md  why-augmentations-matter.md
content/labs/: index.md
content/notes/: _index.md  hello-note.md  index.md  self-supervised-learning.md
content/notes/vliw-simd/: alu-and-engines.md  index.md  instruction-set.md  optimization-strategies.md  scalar-vs-vector.md  vliw-architecture.md
content/posts/: 2025-09-26-hello-world.md  index.md
content/projects/: _index.md  anthropic-performance-takehome.md  hello-project.md  index.md  ssl-representation.md
content/reading/: index.md
courses/mathematics-for-machine-learning-and-data-science/: README.md
courses/mathematics-for-machine-learning-and-data-science/01-linear-algebra/: README.md
courses/mathematics-for-machine-learning-and-data-science/02-calculus/: README.md
courses/mathematics-for-machine-learning-and-data-science/03-probability-and-statistics/: README.md
docs/: README.md  building.md  ci-cd.md  content-guide.md  features.md  index.md  linting.md  project-structure.md  setup.md
docs/labs/: lab-hello.md
docs/posts/: index.md
docs/reading/: hello-reading.md
labs/: index.html  index.qmd  lab-hello.html  lab-hello.qmd
labs/lab-hello/: index.html
notes/: hello-note.html  index.html
notes/hello-note/: index.html
notes/vliw-simd/: index.html
notes/vliw-simd/alu-and-engines/: index.html
notes/vliw-simd/instruction-set/: index.html
notes/vliw-simd/optimization-strategies/: index.html
notes/vliw-simd/scalar-vs-vector/: index.html
posts/: 2025-09-26-hello-world.html  index.html
posts/2025-09-26-hello-world/: index.html
projects/: hello-project.html  index.html
projects/anthropic-performance-takehome/: index.html
projects/hello-project/: index.html
reading/: hello-reading.html  index.html
reading/hello-reading/: index.html
search/: search_index.json
(+10 files in other folders)
