[project]
name = "aiml-engineer"
version = "0.1.0"
description = "Public knowledge base on AI/ML - notes, labs, projects, and blog posts"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "CC-BY-4.0" }
authors = [
    { name = "Anurag Mittal", email = "anurag4dsb@users.noreply.github.com" }
]

dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.46",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-minify-plugin>=0.8.0",
]

[project.urls]
Homepage = "https://aiml.engineer"
Repository = "https://github.com/anurag4dsb/aiml-engineer"
