[project]
name = "aiml-engineer"
version = "0.1.0"
description = "Public knowledge base on AI/ML - notes, labs, projects, and blog posts"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "CC-BY-4.0" }
authors = [
    { name = "Anurag Mittal", email = "anurag4dsb@users.noreply.github.com" }
]

dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-minify-plugin>=0.8.0",
]

[project.urls]
Homepage = "https://aiml.engineer"
Repository = "https://github.com/anurag4dsb/aiml-engineer"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "yamllint>=1.37.1",
    "pymarkdownlnt>=0.9.34",
]

[tool.pymarkdown]
# PyMarkdown linter configuration for markdown files
# See: https://github.com/jackdewinter/pymarkdown

[tool.pymarkdown.plugins]
# MD013: Line length - Disabled to allow flexible documentation formatting
# Technical documentation often benefits from longer lines for code examples and URLs
MD013 = { enabled = false }

# MD041: First line in file should be top-level heading - Disabled for flexibility
# MkDocs pages may use frontmatter or start with introductory text
MD041 = { enabled = false }

# MD033: Inline HTML - Disabled to support MkDocs Material theme features
# The Material theme uses HTML for admonitions, cards, and other rich content
MD033 = { enabled = false }

# MD022: Headings should be surrounded by blank lines - Disabled for flexibility
# Allows more natural documentation flow without strict spacing requirements
MD022 = { enabled = false }
